5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1811_2571.log
== TEST (2019-06-11 18:09:48) 
-- CODE:
a = str(input("digite algo que contenha a letra a: ")).upper()
b = str("a")
c = a - b
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a - b
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:09:53) 
-- CODE:
a = str(input("digite algo que contenha a letra a: ")).upper()
b = str("a")
c = a - b
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = a - b
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:11:42) 
-- CODE:
a = str(input("digite algo que contenha a letra a: ")).upper()
b = str("a")
for ch in range(a):
	c = s.strip(["a"])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:12:19) 
-- CODE:
a = str(input("digite algo que contenha a letra a: ")).upper()
b = str("a")
for ch in range(a):
	c = s.strip(["a"])
	print(s.replace(a, b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:12:27) 
-- CODE:
a = str(input("digite algo que contenha a letra a: ")).upper()
b = str("a")
for ch in range(a):
	c = s.strip(["a"])
	print(s.replace(a, b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:12:43) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	c = s.strip(["a"])
	print(s.replace(a, b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:12:47) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	c = s.strip(["a"])
	print(s.replace(a, b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:13:51) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
b = a.replace("a", "")
print(b)
-- ERROR:
File "XXXX", line 3
    b = a.replace("a", "")
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:13:58) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	b = a.replace("a", "")
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:14:13) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	b = a.replace("a", "")
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:14:30) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	a = a.replace("a", "")
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:14:33) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	a = a.replace("a", "")
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for ch in range(a):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:16:18) 
-- CODE:
from str import*
a = input("digite algo que contenha a letra a: ").upper()
for ch in range(a):
	b = a.replace("a", "")
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from str import*
ModuleNotFoundError: No module named 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:18:35) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:18:46) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:20:37) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:20:51) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:21:10) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:21:13) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:21:21) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "").upper()
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:21:24) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "").upper()
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
INSTITUTO_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:21:37) 
-- CODE:
a = input(str.upper("digite algo que contenha a letra a: "))
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
DIGITE ALGO QUE CONTENHA A LETRA A: Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Institu
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:21:42) 
-- CODE:
a = input(str.upper("digite algo que contenha a letra a: "))
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
DIGITE ALGO QUE CONTENHA A LETRA A: Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Institu
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:07) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a.upper():
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:12) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a.upper():
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:25) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a" or "A", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:28) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a" or "A", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:41) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a,A", "")
	print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:43) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a,A", "")
	print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:22:58) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:23:01) 
-- CODE:
a = input("digite algo que contenha a letra a: ").upper()
for ch in a:
	b = a.replace("a", "")
	print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
INSTITUTO_DE_COMPUTA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:23:26) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "")
	c = a.replace("A", "")
	print(b,c)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:23:29) 
-- CODE:
a = input("digite algo que contenha a letra a: ")
for ch in a:
	b = a.replace("a", "")
	c = a.replace("A", "")
	print(b,c)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computco-ICOMP-UFAM Instituto_de_Computacao-ICOMP
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:23:58) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a".upper(), "")
	print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_C
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:06) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a".upper(), "")
	print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_C
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:08) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a".upper(), "")
	print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_Computacao-ICOMP-UFM
Instituto_de_C
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:19) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch.upper() in s:
	b = s.replace("a", "")
	print(b)
-- ERROR:
File "XXXX", line 2
    for ch.upper() in s:
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:30) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s.upper():
	b = s.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:32) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s.upper():
	b = s.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:44) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:50) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:52) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:24:57) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
	print(b)
-- EXECUTION TIME:
0.82378
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
-----------------------------
----------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbb
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:25:01) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
	print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_de_Computco-ICOMP-UFAM
Instituto_
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:26:29) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:26:34) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- EXECUTION TIME:
0.791466
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:26:36) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:26:43) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "").upper()
print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:26:47) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "").upper()
print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:26:58) 
-- CODE:
s = input("digite algo que contenha a letra a: ").upper()
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:01) 
-- CODE:
s = input("digite algo que contenha a letra a: ").upper()
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:27:08) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- EXECUTION TIME:
0.522662
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:10) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:36) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a" and "A", "")
print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:46) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a","A", "")
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = s.replace("a","A", "")
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:53) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:15) 
-- CODE:
s = input("digite algo que contenha a letra a: ")
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:30) 
-- CODE:
s = str(input("digite algo que contenha a letra a: ")).upper()
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
INSTITUTO_DE_COMPUTACAO-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:37) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:40) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:44) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:52) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:28:55) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:29:00) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- EXECUTION TIME:
0.7847
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:29:02) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:30:27) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:30:30) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	b = s.replace("a", "")
print(b)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:31:52) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
for ch in s:
	if (ch == "a"):
		b = s.replace("a", "")
	elif (ch == "A"):
		b = s.replace("A", "")
print(b)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:33:17) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if (ch == "a"):
		 ss =ss + s.replace(ch, "")
	elif (ch == "A"):
		ss = ss + s.replace(ch, "")
print(ss)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAMInstituto_de_Computco-ICOMP-UFAMInstituto_de_Computacao-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:33:54) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if (ch == "a"):
		 ss = ss + s.replace(ch, "")
	if (ch == "A"):
		b = b + ss.replace(ch, "")
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = b + ss.replace(ch, "")
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:33:57) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if (ch == "a"):
		 ss = ss + s.replace(ch, "")
	if (ch == "A"):
		b = b + ss.replace(ch, "")
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = b + ss.replace(ch, "")
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:34:54) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:34:57) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:35:25) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a"):
		ss = ss + ch
	if(ch != "A"):
		ss = ss + ch
print(ss)
-- OUTPUT:
IInnssttiittuuttoo__ddee__CCoommppuuttaccaoo--IICCOOMMPP--UUFFAMM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:35:38) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a"):
		ss = ss + ch
	elif(ch != "A"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:35:39) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a"):
		ss = ss + ch
	elif(ch != "A"):
		ss = ss + ch
print(ss)
-- EXECUTION TIME:
0.695592
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computacao-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
digite algo que contenha a letra a: a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
digite algo que contenha a letra a: .aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:32) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a" or "A"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:50) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a" or ch != "A"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:53) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a" or ch != "A"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:36:58) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a" and ch != "A"):
		ss = ss + ch
print(ss)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:37:05) 
-- CODE:
s = str(input("digite algo que contenha a letra a: "))
ss = ""
for ch in s:
	if(ch != "a" and ch != "A"):
		ss = ss + ch
print(ss)
-- EXECUTION TIME:
0.918603
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
